<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.example.stephen.helptalk.MainActivity">

    <EditText
        android:id="@+id/main_activity_edit_text"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="@string/edit_text_hint"
        android:textSize="@dimen/edit_text_size_main"
        android:gravity="top"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_bg"
        android:maxLines="4"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:baselineAligned="false"
        android:layout_marginBottom="8dp">

        <ScrollView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="0,1">

                <TableRow
                    android:layout_marginBottom="-5dp">

                    <Button
                        android:id="@+id/type_common_statement"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_text_type_cs"/>

                    <Button
                        android:id="@+id/type_fruit_drink"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/button_text_type_fruit" >
                    </Button>

                </TableRow>
                <TableRow
                    android:layout_marginBottom="-5dp">

                    <Button
                        android:id="@+id/type_single_word"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_text_type_word" >
                    </Button>

                    <Button
                        android:id="@+id/type_verb"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/button_text_type_verb" >
                    </Button>

                </TableRow>
                <TableRow>

                    <Button
                        android:id="@+id/type_feeling"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_text_type_feeling" >
                    </Button>

                    <Button
                        android:id="@+id/type_sports"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/button_text_type_sport" >
                    </Button>

                </TableRow>

            </TableLayout>

        </ScrollView>

        <TableLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_marginBottom="-5dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/main_func_clean"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_text_func_clean" >
                </Button>

                <Button
                    android:id="@+id/main_func_play"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_text_func_play" >
                </Button>

            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginBottom="-5dp">

                <Button
                    android:id="@+id/main_func_backspace"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_text_func_backspace" >
                </Button>

                <Button
                    android:id="@+id/main_func_edit"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_text_func_edit" >
                </Button>

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/type_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
